# intro2prog-homework-common-lib

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/common/geometry/: CMakeLists.txt
src/common/geometry/plane/: line.cpp  line.h  mesh.cpp  mesh.h  segment.cpp  segment.h  triangle.cpp  triangle.h  util.cpp  util.h
src/common/opengl/: CMakeLists.txt  app.cpp  app.h  buffer.cpp  buffer.h  framebuffer.cpp  framebuffer.h  listener.cpp  listener.h  program.cpp  program.h  texture.cpp  texture.h  util.cpp  util.h  vertex_array.cpp  vertex_array.h
src/common/opengl/gui/: animation_var.cpp  animation_var.h  button.cpp  button.h  device_model.cpp  device_model.h  font_factory.cpp  font_factory.h  interpolation.cpp  interpolation.h  mix_model.cpp  mix_model.h  model.cpp  model.h  text_bar.cpp  text_bar.h
